--- a/index.html
+++ b/index.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Collage</title>
+        <title>Fjolt - 3d CSS Parallax Mosaic Demo</title>
         <link rel="stylesheet" type="text/css" href="style.css" />
+        <meta name=”description” content="3d CSS Parallax Image Mosaic Effect Demo">
+        <meta name="robots" content="index,follow">
+        <meta name="keywords" content="mosaic,css,parallax,3d,web development,web design,html5">
+        <link rel="canonical" href="https://fjolt.com/article/css-parallax-3d-image-composition">
+
+        <meta property="og:title" content="Fjolt - 3d CSS Parallax Mosaic Demo" />
+        <meta property="og:description" content="3d CSS Parallax Image Mosaic Effect" />
+        <meta property="og:image" content="https://fjolt.com/images/misc/211220201.webp" />
+        <meta property="og:url" content="https://fjolt.com/demo/css-parallax" />
+        <meta property="og:site_name" content="Fjolt - 3d CSS Parallax Mosaic" />
+        
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/48764efa36.js" crossorigin="anonymous"></script>
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -43,7 +54,7 @@
             <div id="content">
                 <h1><a href="https://fjolt.com/">Fjolt</a></h1>
                 <div id="links">
-                    <a href="#"><i class="fal fa-arrow-left"></i> Back to Article</a>
+                    <a href="https://fjolt.com/article/css-parallax-3d-image-composition/"><i class="fal fa-arrow-left"></i> Back to Article</a>
                     <a href="https://github.com/smpnjn/parallel-css-hero"><i class="fal fa-code-merge"></i> Github Repo</a>
                     <a href="https://twitter.com/smpnjn"><i class="fab fa-twitter"></i> Twitter</a>
                 </div>
