--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
                     </div>
                 </div>
             </div>
-            <div id="slide-text">
-                The only demo you'll ever need.
-                <div id="instruction">
-                    <i class="fal fa-hand-pointer"></i> Drag me!
-                </div>
+        </div>
+        <div id="slide-text">
+            <div id="text">The only demo you'll ever need.</div>
+            <div id="instruction">
+                <i class="fal fa-hand-pointer"></i> Drag me!
             </div>
-            <div id="content">
-                <h1><a href="https://fjolt.com/">Fjolt</a></h1>
-                <div id="links">
-                    <a href="https://fjolt.com/article/css-parallax-3d-image-composition/"><i class="fal fa-arrow-left"></i> Back to Article</a>
-                    <a href="https://github.com/smpnjn/parallel-css-hero"><i class="fal fa-code-merge"></i> Github Repo</a>
-                    <a href="https://twitter.com/smpnjn"><i class="fab fa-twitter"></i> Twitter</a>
-                </div>
+        </div>
+        <div id="content">
+            <h1><a href="https://fjolt.com/">Fjolt</a></h1>
+            <div id="links">
+                <a href="https://fjolt.com/article/css-parallax-3d-image-composition/"><i class="fal fa-arrow-left"></i> Back to Article</a>
+                <a href="https://github.com/smpnjn/parallel-css-hero"><i class="fal fa-code-merge"></i> Github Repo</a>
+                <a href="https://twitter.com/smpnjn"><i class="fab fa-twitter"></i> Twitter</a>
             </div>
         </div>
     </body>
