--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="robots" content="index,follow">
         <meta name="keywords" content="mosaic,css,parallax,3d,web development,web design,html5">
         <link rel="canonical" href="https://fjolt.com/article/css-parallax-3d-image-composition">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
         <meta property="og:title" content="Fjolt - 3d CSS Parallax Mosaic Demo" />
         <meta property="og:description" content="3d CSS Parallax Image Mosaic Effect" />
